prusti-tests/tests/verify/ui/predicates/predicate-in-external-spec.stderr
error: Can not declare abstract predicate in external spec
  --> $DIR/predicate-in-external-spec.rs:9:5
   |
9  | /     predicate!{
10 | |         fn foo() -> bool;
11 | |     }
   | |_____^

error: Can not declare abstract predicate in external spec
  --> $DIR/predicate-in-external-spec.rs:23:5
   |
23 | /     predicate!{
24 | |         fn bar() -> bool;
25 | |     }
   | |_____^

error: aborting due to 2 previous errors

